# project-template

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  local-precommit-hook  pyproject.toml  sonar-project.properties  tasks.py
azure-devops/: build-service-pipeline-agent.yml  release-pipeline-agent.yml
devops/: README.md  init-pyenv.sh  run_task.sh  settings.py  tasks.py
devops/lib/: component.py  log.py  utils.py
devops/tests/: conftest.py  test_component.py  test_tasks.py  test_utils.py
envs/minikube/: settings.py
envs/minikube/merges/service/pipeline-agent/kube/: 01-config.yaml
envs/minikube/secrets/: 01-pipeline-agent.yaml
kube/: 02-kured.yaml
service/pipeline-agent/: Dockerfile
service/pipeline-agent/kube/: 01-config.yaml  02-deployment.yaml
service/pipeline-agent/kube/merge-templates/: 01-config.yaml
