[tool.poetry]
name = "myproj"
version = "0.1.0"
description = ""
authors = ["Janne Enberg <janne@lieturd.com>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.3"
coloredlogs = "^10.0"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
codecov = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
